--- a/inventories/zelgray.work/host_vars/zelgray.work.yml
+++ b/inventories/zelgray.work/host_vars/zelgray.work.yml
@@ -4,8 +4,10 @@ local_addresses:
   - "127.0.0.1"
   - "[::1]"
 openvpn_key_certs_path: "{{ openvpn_key_certs_path }}"
+openvpn_enable_management: "{{ openvpn_enable_management }}"
 proxy_users_list: "{{ proxy_users_list }}"
-management_user: "{{ management_user }}"
+proxy_management_user: "{{ proxy_management_user }}"
+proxy_enable_management: "{{ proxy_enable_management }}"
 ansible_python_interpreter: "/usr/bin/env python3"
 
 ...
