- Right version of Ansible python interpreter - DNS servers are changed for the proxy (from Google to Cloudflare) - The proxy is run under nobody

--- a/inventories/zelgray.work/host_vars/zelgray.work.yml
+++ b/inventories/zelgray.work/host_vars/zelgray.work.yml
@@ -8,6 +8,5 @@ openvpn_enable_management: "{{ openvpn_enable_management }}"
 proxy_users_list: "{{ proxy_users_list }}"
 proxy_management_user: "{{ proxy_management_user }}"
 proxy_enable_management: "{{ proxy_enable_management }}"
-ansible_python_interpreter: "/usr/bin/env python3"
-
+docker_volumes_directory: "/var/lib/docker/volumes"
 ...
