--- a/roles/3proxy/defaults/main/3proxy.yml
+++ b/roles/3proxy/defaults/main/3proxy.yml
@@ -2,8 +2,8 @@
 proxy_config:
   server_ip: "{{ ansible_default_ipv4.address }}"
   dns:
-    - 8.8.8.8
-    - 8.8.4.4
+    - 1.1.1.1
+    - 1.0.0.1
   port: 6677
   management:
     port: 8080
@@ -16,6 +16,8 @@ proxy_ports:
   - port: "{{ proxy_config['management']['port'] }}"
     enabled: "{{ proxy_config['management']['enabled'] }}"
 service_name: "3proxy"
+pid_dir: "/var/run/{{ service_name }}"
+pid_file: "{{ pid_dir }}/{{ service_name }}.pid"
 config_path: "/etc/{{ service_name }}.cfg"
 service_path: "/usr/lib/systemd/system/{{ service_name }}.service"
 ...
