- IPv6 support (including for Docker) - Role `nginx-certbot` - Daemon config for Docker

--- a/inventories/zelgray.work/host_vars/zelgray.work.yml
+++ b/inventories/zelgray.work/host_vars/zelgray.work.yml
@@ -9,4 +9,5 @@ proxy_users_list: "{{ proxy_users_list }}"
 proxy_management_user: "{{ proxy_management_user }}"
 proxy_enable_management: "{{ proxy_enable_management }}"
 docker_volumes_directory: "/var/lib/docker/volumes"
+node_address: "{{ node_address }}"
 ...
