- The host is renamed - Service `3proxy` can be reloaded - Certbot service & timer can be generated for any amount of domains

--- a/inventories/zelgray_vds/hosts.yml
+++ b/inventories/zelgray_vds/hosts.yml
@@ -1,5 +1,5 @@
 all:
   hosts:
-    zelgray.work:
+    zelgray_vds:
       ansible_host: "{{ node_address }}"
       ansible_connection: "{{ 'local' if node_address in local_addresses else 'ssh' }}"
